# fizzbuzz

./: CMakeLists.txt  README.md
cmake/configs/: fizzbuzzConfig.cmake.in
include/: fizzbuzz.h
src/: fizzbuzz.cpp
tests/: main.cpp
